--- a/index.html
+++ b/index.html
@@ -1,13 +1,39 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Hello World</title>
-  <link rel="stylesheet" href="css/style.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<body class="fullscreen">
-  <div class="container">
-    <h1 class="title">Hello World!</h1>
-  </div>
-</body>
+<!DOCTYPE html>
+<html lang="de">
+  <head>
+    <meta charset="utf-8" />
+    <title>PWA-Krebse</title>
+    <link rel="icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="apple-touch-icon" href="images/hello-icon-152.png" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="manifest" href="/manifest.json" />
+    <meta name="theme-color" content="white" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <meta name="apple-mobile-web-app-title" content="Hello World" />
+    <meta name="msapplication-TileImage" content="images/hello-icon-144.png" />
+    <meta name="msapplication-TileColor" content="#FFFFFF" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta name="theme-color" content="white" />
+  </head>
+  <body class="fullscreen">
+    <div class="container">
+      <h1>Anmeldung</h1>
+      <br />
+      <form>
+        <label for="email"> E-Mail </label>
+        <br />
+        <input class="" type="email" id="email" name="email" />
+        <br />
+        <label for="password"> Passwort </label>
+        <br />
+        <input class="" type="password" id="password" name="password" />
+        <br />
+        <br />
+        <button type="submit">Anmelden</button>
+      </form>
+    </div>
+    <script src="js/main.js"></script>
+  </body>
 </html>
