--- a/index.html
+++ b/index.html
@@ -1,39 +1,47 @@
 <!DOCTYPE html>
-<html lang="de">
+<html>
   <head>
+    <!-- Responsive -->
     <meta charset="utf-8" />
-    <title>PWA-Krebse</title>
-    <link rel="icon" href="favicon.ico" type="image/x-icon" />
-    <link rel="apple-touch-icon" href="images/hello-icon-152.png" />
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="manifest" href="/manifest.json" />
-    <meta name="theme-color" content="white" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-    <meta name="apple-mobile-web-app-title" content="Hello World" />
-    <meta name="msapplication-TileImage" content="images/hello-icon-144.png" />
-    <meta name="msapplication-TileColor" content="#FFFFFF" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width,
+				initial-scale=1"
+    />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <meta name="theme-color" content="white" />
+
+    <!-- Title -->
+    <title>PWA Tutorial</title>
+
+    <!-- Meta Tags required for
+	Progressive Web App -->
+    <meta name="apple-mobile-web-app-status-bar" content="#aa7700" />
+    <meta name="theme-color" content="black" />
+
+    <!-- Manifest File link -->
+    <link rel="manifest" href="manifest.json" />
   </head>
-  <body class="fullscreen">
-    <div class="container">
-      <h1>Anmeldung</h1>
-      <br />
-      <form>
-        <label for="email"> E-Mail </label>
-        <br />
-        <input class="" type="email" id="email" name="email" />
-        <br />
-        <label for="password"> Passwort </label>
-        <br />
-        <input class="" type="password" id="password" name="password" />
-        <br />
-        <br />
-        <button type="submit">Anmelden</button>
-      </form>
-    </div>
-    <script src="js/main.js"></script>
+
+  <body>
+    <h1 style="color: green">GeeksforGeeks</h1>
+
+    <p>This is a simple tutorial for creating a PWA application.</p>
+
+    <script>
+      window.addEventListener("load", () => {
+        registerSW();
+      });
+
+      // Register the Service Worker
+      async function registerSW() {
+        if ("serviceWorker" in navigator) {
+          try {
+            await navigator.serviceWorker.register("serviceworker.js");
+          } catch (e) {
+            console.log("SW registration failed");
+          }
+        }
+      }
+    </script>
   </body>
 </html>
