--- a/index.html
+++ b/index.html
@@ -1,47 +1,37 @@
 <!DOCTYPE html>
-<html>
+<html lang="de">
   <head>
-    <!-- Responsive -->
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width,
-				initial-scale=1"
-    />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-
-    <!-- Title -->
-    <title>PWA Tutorial</title>
-
-    <!-- Meta Tags required for
-	Progressive Web App -->
-    <meta name="apple-mobile-web-app-status-bar" content="#aa7700" />
-    <meta name="theme-color" content="black" />
-
-    <!-- Manifest File link -->
+    <link rel="stylesheet" href="css/style.css" />
     <link rel="manifest" href="manifest.json" />
+    <!-- ios support -->
+    <link rel="apple-touch-icon" href="images/icons/icon-72x72.png" />
+    <link rel="apple-touch-icon" href="images/icons/icon-96x96.png" />
+    <link rel="apple-touch-icon" href="images/icons/icon-128x128.png" />
+    <link rel="apple-touch-icon" href="images/icons/icon-144x144.png" />
+    <link rel="apple-touch-icon" href="images/icons/icon-152x152.png" />
+    <link rel="apple-touch-icon" href="images/icons/icon-192x192.png" />
+    <link rel="apple-touch-icon" href="images/icons/icon-384x384.png" />
+    <link rel="apple-touch-icon" href="images/icons/icon-512x512.png" />
+    <meta name="apple-mobile-web-app-status-bar" content="#db4938" />
+    <meta name="theme-color" content="#db4938" />
+
+    <title>Fangportal PWA</title>
   </head>
-
   <body>
-    <h1 style="color: green">GeeksforGeeks</h1>
-
-    <p>This is a simple tutorial for creating a PWA application.</p>
-
-    <script>
-      window.addEventListener("load", () => {
-        registerSW();
-      });
-
-      // Register the Service Worker
-      async function registerSW() {
-        if ("serviceWorker" in navigator) {
-          try {
-            await navigator.serviceWorker.register("serviceworker.js");
-          } catch (e) {
-            console.log("SW registration failed");
-          }
-        }
-      }
-    </script>
+    <main>
+      <nav>
+        <h1>Fangportal</h1>
+        <ul>
+          <li>Fänge anzeigen</li>
+          <li>Fang eintragen</li>
+          <li>Logout</li>
+        </ul>
+      </nav>
+      <div class="container"></div>
+    </main>
+    <script src="js/app.js"></script>
   </body>
 </html>
