--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
 <body class="fullscreen">
   <div class="container">
     <h1 class="title">Fangportal</h1>
+    <a href="#">
+      Fang eintragen
+    </a>
+    <br/>
+    <a href="#">
+      Fänge anzeigen
+    </a>
   </div>
 </body>
 </html>
