--- a/list.html
+++ b/list.html
@@ -8,11 +8,11 @@
 <body class="fullscreen">
   <div class="container">
     <ul class="topnav">
-      <li><a class="active" href="#">Dashboard</a></li>
+      <li><a class="active" href="index.html">Dashboard</a></li>
       <li><a href="form.html">Fang eintragen</a></li>
-      <li><a href="list.html">Fänge anzeigen</a></li>
+      <li><a href="#">Fänge anzeigen</a></li>
     </ul>
-    <h1 class="title">Fangportal</h1>
+    <h1 class="title">Fänge anzeigen</h1>
   </div>
 </body>
 </html>
