--- a/form.html
+++ b/form.html
@@ -12,7 +12,9 @@
         <li><a href="#">Fang eintragen</a></li>
         <li><a href="list.html">Fänge anzeigen</a></li>
       </ul>
-      <h1 class="title m-b-2">Fang eintragen</h1>
+      <br/>
+      <h1 class="title">Fang eintragen</h1>
+      <br/>
         <form
             method="POST"
             action="https://backend.michaelgrabinger.com/api/fangs"
