--- a/form.html
+++ b/form.html
@@ -14,7 +14,7 @@
       </ul>
       <br/>
       <h1 class="title">Fang eintragen</h1>
-      <br/>
+          <br/>
         <form
             method="POST"
             action="https://backend.michaelgrabinger.com/api/fangs"
@@ -113,5 +113,6 @@
             >
         </form>
   </div>
+  <script src="js/main.js"></script>
 </body>
 </html>
