--- a/index.html
+++ b/index.html
@@ -13,24 +13,24 @@
       //
       // Define your database
       //
-      var db = new Dexie("friend_database");
+      var db = new Dexie("post_database");
       db.version(1).stores({
-          friends: 'name,shoeSize'
+          fangs: 'name,crustacean_1,crustacean_2,crustacean_3,crustacean_4,number_fish_traps,comment,user_id,section_id'
       });
 
       //
       // Put some data into it
       //
-      db.friends.put({name: "Nicolas", shoeSize: 8}).then (function(){
+      db.fangs.put({name: "Nicolas"}).then (function(){
           //
           // Then when data is stored, read from it
           //
-          return db.friends.get('Nicolas');
-      }).then(function (friend) {
+          return db.fangs.get('Nicolas');
+      }).then(function (fang) {
           //
           // Display the result
           //
-          alert ("Nicolas has shoe size " + friend.shoeSize);
+          alert ("Nicolas has shoe size " + fang.name);
       }).catch(function(error) {
          //
          // Finally don't forget to catch any error
