--- a/index.html
+++ b/index.html
@@ -102,7 +102,8 @@
         <br/>
         <input
             class=""
-            type="submit"
+            type="button"
+            onclick="submit()"
         >
         <input
         class=""
