--- a/index.html
+++ b/index.html
@@ -100,15 +100,18 @@
         name="section_id"
         >
         <br/>
-        <input
-            class=""
-            type="button"
-            onclick="submit()"
+        <button
+          class=""
+          type="button"
+          onclick="submit()"
         >
-        <input
-        class=""
+          Absenden
+        </button>
+        <button
         type="reset"
         >
+          Zurücksetzen
+        </button>
     </form>
   </div>
   <script src="js/main.js"></script>
