--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
   <div class="container">
     <h1 class="title">Fangportal</h1>
     <br/>
-    <form
-        method="POST"
-    >
+    <form>
         <label for="name">
             Name*
         </label>
