--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div class="container">
     <h1 class="title">Fangportal</h1>
     <br/>
-    <form>
+    <div>
         <label for="name">
             Name*
         </label>
@@ -109,7 +109,7 @@
         >
           Zurücksetzen
         </button>
-    </form>
+    </div>
   </div>
   <script src="js/main.js"></script>
 </body>
